Implementacion de testrailClient y Reporter, Refactorizacion de pruebas unitarias para reportar en testRail